--- a/composer.json
+++ b/composer.json
@@ -83,6 +83,7 @@
         "dama/doctrine-test-bundle": "^7.2",
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "hautelook/alice-bundle": "^2.12",
+        "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.3.*",
         "symfony/css-selector": "6.3.*",
@@ -92,5 +93,8 @@
         "symfony/phpunit-bridge": "^6.3",
         "symfony/stopwatch": "6.3.*",
         "symfony/web-profiler-bundle": "6.3.*"
+    },
+    "scripts": {
+        "test": "SYMFONY_DEPRECATIONS_HELPER=disabled php ./vendor/bin/phpunit --dont-report-useless-tests ./tests "
     }
 }
