--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,6 @@
 {
+    "name": "api/taskmanager",
+    "description": "Api for task manager",
     "type": "project",
     "license": "proprietary",
     "minimum-stability": "stable",
@@ -68,7 +70,8 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ]
+        ],
+        "test": "SYMFONY_DEPRECATIONS_HELPER=disabled php ./vendor/bin/phpunit --dont-report-useless-tests ./tests "
     },
     "conflict": {
         "symfony/symfony": "*"
@@ -93,8 +96,5 @@
         "symfony/phpunit-bridge": "^6.3",
         "symfony/stopwatch": "6.3.*",
         "symfony/web-profiler-bundle": "6.3.*"
-    },
-    "scripts": {
-        "test": "SYMFONY_DEPRECATIONS_HELPER=disabled php ./vendor/bin/phpunit --dont-report-useless-tests ./tests "
     }
 }
